fixing font awesome again... && donate overflow-x fixed

--- a/client/src/contents/css/DonateHero.css
+++ b/client/src/contents/css/DonateHero.css
@@ -2,13 +2,15 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 15px;
-	padding-top: 1.5rem;
-	height: 75vh;
-	overflow: hidden;
-	background: url('../img/evergreen-cemetery.png');
-	background-repeat: no-repeat;
-	background-size: 100vw;
+	padding-top: 7vh;
+	max-height: 68vh;
+	background: url(../img/evergreen-cemetery.png);
+	background-size: cover;
+	object-fit: cover;
+	height: 100vh;
+	width: 100vw;
+	z-index: -1;
+	overflow-x: hidden;
 }
 
 .donate-hero-header {
